Quick fix for overflowing equations on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -191,3 +191,7 @@ ul.footnote-ul {
 ul.footnote-ul li {
   display: inline;
 }
+
+.katex-display {
+  overflow-x: auto;
+}
